modifying the list

--- a/home/coder/project/index.html
+++ b/home/coder/project/index.html
@@ -15,9 +15,11 @@
             <div id="more" class="col-12 col-lg-6">
                 <h2> Favorite Piano Pieces </h2>
                 <ul> 
-                    <li>XXX</li>
-                    <li>YYY</li>
-                    <li>ZZZ</li>
+                    <li>Richard Strauss: "Morgen!" </li>
+                    <li>Edvard Grieg: Lyric Pieces Op.12 1. Arietta</li>
+                    <li>Schubert-Liszt: Soirées de Vienne No.6</li>
+                    <li>Ludovico Einaudi: Night</li>
+                    <li>Mozart Sonata for Two Pianos, K.448</li>
                 </ul>
                 <h2> Favorite Films </h2>
                 <ol>
