--- a/home/coder/project/index.html
+++ b/home/coder/project/index.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div id="bio" class="col-12 col-lg-6 text-center">
                 <h1>Reishiro Kawakami</h1> 
-                <img src="photo.jpg" class="img-fluid">
+                <img src="IMG_4410.JPG" class="img-fluid" width=”250" height=”300”>
             </div>
             <div id="more" class="col-12 col-lg-6">
                 <h2> Favorite Piano Pieces </h2>
